# agentbox

./: .gitignore  README.md  pyproject.toml
agentbox/: __init__.py  cli.py  config.py  lifecycle.py  mcp.py  mounts.py  net.py  preflight.py  run.py  sandbox.py  store.py
agentbox/agents/: __init__.py  base.py  claude.py  copilot.py
claude_sandbox/: __init__.py  cli.py  config.py  lifecycle.py  mcp.py  mounts.py  net.py  sandbox.py
spikes/: FINDINGS.md  bwrap_net_spike.sh
tests/: t11_delete.sh  t12_cli.sh  t13_mcp_ports.sh  t14_copilot.sh  t3_boot.sh  t4_identity.sh  t5_store.sh  t7_masking.sh  t8_runpath.sh  t9_ide.sh  test_agents.py  test_claude.py  test_cli.py  test_config.py  test_copilot.py  test_mcp.py  test_mounts.py  test_net.py  test_path.py  test_preflight.py  test_run.py  test_store.py
