[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-box"
version = "0.0.1"
description = "Run an agentic CLI (claude, copilot, …) inside an unprivileged bubblewrap (bwrap) + pasta sandbox"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Giampaolo Fresi Roglia" }]
# No third-party runtime deps: tomllib is stdlib (>=3.11); the mechanism is the
# host's own bwrap/pasta binaries (a host concern, not a Python dependency).
dependencies = []

[project.scripts]
# Internal entry point. Each agent's user-facing command (`claude`, `copilot`,
# ...) is a shim on $PATH pointing here; `box` selects the agent by argv[0].
box = "agentbox.cli:main"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools]
packages = ["agentbox", "agentbox.agents"]

[tool.pytest.ini_options]
# Make `pytest -q tests/test_cli.py` importable from a clean checkout without
# an editable install (flat layout: package lives at the repo root).
pythonpath = ["."]
